[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.6", features = ["blocking","json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*